# Lab-Programs

./: Data of device.xlsx  Distance_vs_time_Arduino.py  Instruction.md  README.md  WIP.dwg  WIP1.dwg
Arduino_Distance_measure_plus_filter/: main.py
Arduino_Distance_measuring/: Arduino_Distance_measuring.ino
Arduino_Distance_measuring_v2.0/: Arduino_Distance_measuring_v2.0.ino  Function.txt
Arduino_LED_testing/: Arduino_LED_testing.ino
Distance_Ultrasound_plot/: Distance_Ultrasound_plot.ino
DopplerEffect/: README.md  SoundAnalysisDopplerEffect.m  audioprocessing.m  realtimeFourier.m  separatedDoublePlot.m
Levitation/: README.md
Project/: Python_code.py
Project/Kevin/: CMakeLists.txt  ListDevices.cpp  main.cpp  mainwindow.ui
Project/Main_app/: CMakeLists.txt  main.cpp
Project/Without_Qt/: CMakeLists.txt  main.cpp
Project/Without_Qt/include/serial/: v8sdtint.h
Project/Without_Qt/portaudio/install/lib/cmake/portaudio/: portaudioTargets-release.cmake
Project/sketch_jul8a/: sketch_jul8a.ino
SoundInterference/: README.md
SoundInterference/A_vs_t_Matlab/: README.md  realTimeAudioPlot.m  realtimeFourier.m
SoundInterference/Interference sound/mic_rms_visualizer/: Cargo.toml
StringVibration/: README.md
